Opened 9 years ago

Closed 9 years ago

Last modified 8 years ago

#12746 closed bug (fixed)

[Patch] netresolv: fix gcc6 build

Reported by: mt Owned by: axeld
Priority: normal Milestone: Unscheduled
Component: Kits/Network Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Gcc6 warns some '-Werror=unused-const-variable=', but I don't know if these variables can be really removed. so marked as unused by attribute.

Attachments (2)

0004-netresolv-fix-gcc6-build.patch (11.0 KB ) - added by mt 9 years ago.
netresolv_buildlog.txt (82.1 KB ) - added by mt 9 years ago.

Download all attachments as: .zip

Change History (8)

comment:1 by mt, 9 years ago

patch: 01

by mt, 9 years ago

Attachment: netresolv_buildlog.txt added

comment:2 by pulkomandy, 9 years ago

The "rcsid" could be commented out, it is useful to know which version of *BSD we got the files from, but not of any use to the compiler.

The others can be completely removed, if the compiler says so.

in reply to:  2 comment:3 by mt, 9 years ago

Replying to pulkomandy:

The "rcsid" could be commented out, it is useful to know which version of *BSD we got the files from, but not of any use to the compiler.

The others can be completely removed, if the compiler says so.

Hi, pulkomandy. All rcsids are between #if and #endif, so can I use && !defined(__HAIKU__) to comment out them?

Last edited 9 years ago by pulkomandy (previous) (diff)

in reply to:  2 comment:4 by korli, 9 years ago

Replying to pulkomandy:

The "rcsid" could be commented out, it is useful to know which version of *BSD we got the files from, but not of any use to the compiler.

There is git history for that.

comment:5 by pulkomandy, 9 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev50503.

comment:6 by mt, 8 years ago

rcsid[] in dst/support.c is not guarded with LINT, so we could comment out it for gcc6 build.

http://cgit.haiku-os.org/haiku/tree/src/kits/network/netresolv/dst/support.c#n1

Note: See TracTickets for help on using tickets.