netresolv: Remove or disable unused variables

Fixes #12746.